Fixed alignments yes

--- a/media/css/firefox/releasenotes.less
+++ b/media/css/firefox/releasenotes.less
@@ -93,7 +93,8 @@
     position: relative;
 }
 .version_wrapper {
-    width: 17%;
+    width: 11%;
+    padding-left:4%;
     left:0;
     top:0;
     float: left;
@@ -107,7 +108,7 @@
     float: left;
     text-align: center;
     width: auto;
-    padding-left:15%;
+    padding-left:7%;
     left:0;
     top:0;
     padding-top:1.2em;
@@ -117,11 +118,12 @@
 .thank_wrapper {
     position: relative;
     float: left;
-    width:70%;
-    padding-left:12%;
+    width:75%;
+    padding-left:22%;
     text-align: left;
     padding-top: 20px;
     padding-bottom: 10px;
+    display:block;
 }
 .title_text_wrap {
     width: 40%;
@@ -141,7 +143,8 @@
 }
 .version_wrapper_alt {
     height: 100%;
-    width:25%;
+    width:11%;
+    padding-left:4%;
     float: left;
     text-align: center;
     position: relative;
@@ -153,9 +156,9 @@
     float: left;
     padding-top:0em;
     display: inline-block;
-    padding-left:10%;
+    padding-left:7%;
 }
-.title_text_wrap_alt {
+.title_text_wrapper_alt {
     width: 100%;
     position: relative;
 }
@@ -186,7 +189,6 @@
     background-color: #F0F0F0;
     text-align: center;
     p {
-        .span(12);
     }
     h1 {
         font-weight: 400;
